# VLMEvalKit

./: .env  .env_template  .gitignore  .pre-commit-config.yaml  Custom_Benchmark_and_Model.md  Development.md  Dockerfile  LICENSE  MANIFEST.in  Quickstart.md  Quickstart_zh-CN.md  README.md  README_ja.md  README_zh-CN.md  app.py  cover.sh  demo.py  gen_table.py  lb_info.py  meta_data.py  mmbench_icl.py  multi_run_api.py  prepare_asclepius_for_vlmeval.py  requirements.txt  run.py  runScript  run_api.py  run_gen.py  run_gen.sh  run_vlmealkit.sh  run_xhsapi.py  setup.cfg  setup.py  start.sh  test.py  tools.py  torchrun.sh  ttguoguo3  ttguoguo3.pub
.history/: .gitignore_20240730200614  .gitignore_20240730200617
GPT4V_INT/: 01_MMMU_DEV_VAL.pkl  GPT4V_INT_MMMU_DEV_VAL_supp.pkl
InternVL-Chat-V1-5/: InternVL-Chat-V1-5_MTVQA_TEST.xlsx  InternVL-Chat-V1-5_MTVQA_TEST_JA.xlsx  InternVL-Chat-V1-5_MTVQA_TEST_JA_acc.csv  InternVL-Chat-V1-5_MTVQA_TEST_acc.csv
MiniCPM-Llama3-V-2_5/: MiniCPM-Llama3-V-2_5_MTVQA_TEST.xlsx  MiniCPM-Llama3-V-2_5_MTVQA_TEST_acc.csv
MiniCPM-V-2/: MiniCPM-V-2_MTVQA_TEST.xlsx  MiniCPM-V-2_MTVQA_TEST_acc.csv
VIDEO_DLC_scripts/: MMSci_internvl2_8b.sh  video_lb_update_cu118_smol.sh  (+2 more)
requirements/: rbln.txt  (+1 more)
vlmeval/dataset/PHYSICS/Math-Verify/: .gitignore  .gitmodules  CITATION.cff  LICENCE  Makefile  evaluate_model.py  evaluate_model_outputs.py  extract_answers.py  output.csv  pyproject.toml
vlmeval/dataset/PHYSICS/Math-Verify/examples/: few_shot_answers.csv  model_outputs.csv  sample_answers.csv
vlmeval/dataset/PHYSICS/Math-Verify/scripts/: publish.sh
vlmeval/dataset/PHYSICS/Math-Verify/src/math_verify/: __init__.py  errors.py  few_shots.py  grader.py  metric.py  parser.py  tasks.py  utils.py
vlmeval/dataset/PHYSICS/Math-Verify/tests/: test_all.py  test_configs.py  test_numina_cases.py  test_open_thoughts.py  test_strict.py  test_string_extraction.py  test_timeout.py  test_yujianll.py
vlmeval/dataset/PHYSICS/latex2sympy2_extended/: .gitignore  pyproject.toml
vlmeval/dataset/PHYSICS/latex2sympy2_extended/sandbox/: linalg_equations.py  linalg_span.py  matrix_placeholders.py  random_sandbox.py
vlmeval/dataset/PHYSICS/latex2sympy2_extended/scripts/: compile.sh  pre-commit  pre-push  publish.sh
vlmeval/dataset/PHYSICS/latex2sympy2_extended/src/latex2sympy2_extended/: PS.g4  __init__.py  antlr_parser.py  latex2sympy2.py  logic.py  math_normalization.py  sets.py  symbols.py
vlmeval/dataset/PHYSICS/latex2sympy2_extended/tests/: abs_test.py  all_bad_test.py  all_good_test.py  atom_expr_test.py  binomial_test.py  boxed_test.py  ceil_test.py  complex_test.py  context.py  exp_test.py  floor_test.py  gcd_test.py  greek_test.py  grouping_test.py  lcm_test.py  left_right_cdot_test.py  linalg_test.py  max_test.py  min_test.py  mixed_fraction_test.py  mod_test.py  normalization_test.py  overline_test.py  pi_test.py  relation_test.py  set_test.py  symbols_test.py  trig_test.py  variable_test.py
(+1671 files in other folders)
